--- a/wp-content/themes/audio-active/css/audio-active-styles.css
+++ b/wp-content/themes/audio-active/css/audio-active-styles.css
@@ -678,15 +678,22 @@ img {
     .textwidget .quote-widget .widget-quote-author-title {
       font-size: 14px; }
 
-.get-involved-block .three-col-articles .article-module .gray-line-container {
-  padding-top: 40px;
-  border-top: solid 1px #ebebeb; }
-  .get-involved-block .three-col-articles .article-module .gray-line-container .image-container {
+.our-work-block {
+  margin-top: 40px;
+  margin-bottom: 10px; }
+  .our-work-block .ourwork-articles-button {
+    padding-bottom: 20px;
+    border-bottom: solid 1px #ebebeb; }
+
+.get-involved-block {
+  margin-top: 40px;
+  margin-bottom: 10px; }
+  .get-involved-block .three-col-articles .article-module .image-container {
     overflow: hidden;
     position: relative;
     border-top: 2px #0afff9 solid;
     margin-bottom: 10px; }
-    .get-involved-block .three-col-articles .article-module .gray-line-container .image-container::after {
+    .get-involved-block .three-col-articles .article-module .image-container::after {
       content: '';
       position: absolute;
       height: 0;
@@ -696,25 +703,42 @@ img {
       top: 0;
       right: 0;
       border-color: #0afff9 #0afff9 transparent transparent; }
-    .get-involved-block .three-col-articles .article-module .gray-line-container .image-container img {
+    .get-involved-block .three-col-articles .article-module .image-container img {
       border-top: none;
       width: 100%;
       height: 100%; }
-
-.get-involved-block .three-col-articles .article-module .get-involved-article-buttons {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center; }
-  @media only screen and (max-width: 350px) {
-    .get-involved-block .three-col-articles .article-module .get-involved-article-buttons {
-      -ms-flex-wrap: wrap;
-      flex-wrap: wrap; } }
-  .get-involved-block .three-col-articles .article-module .get-involved-article-buttons .btn-more {
-    margin-top: 0; }
-
-.align-text {
-  text-align: right; }
+  .get-involved-block .three-col-articles .article-module .get-involved-article-buttons {
+    padding-bottom: 20px;
+    border-bottom: solid 1px #ebebeb;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center; }
+    @media only screen and (max-width: 350px) {
+      .get-involved-block .three-col-articles .article-module .get-involved-article-buttons {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap; } }
+    @media only screen and (min-width: 768px) and (max-width: 1010px) {
+      .get-involved-block .three-col-articles .article-module .get-involved-article-buttons {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap; } }
+    .get-involved-block .three-col-articles .article-module .get-involved-article-buttons .btn-more {
+      margin-top: 0; }
+    .get-involved-block .three-col-articles .article-module .get-involved-article-buttons .get-involved-link {
+      padding-left: 0px;
+      padding-right: 0px; }
+    .get-involved-block .three-col-articles .article-module .get-involved-article-buttons .get-involved-btn {
+      text-align: right;
+      padding-left: 0px;
+      padding-right: 0px; }
+      @media only screen and (max-width: 350px) {
+        .get-involved-block .three-col-articles .article-module .get-involved-article-buttons .get-involved-btn {
+          text-align: left;
+          margin-top: 20px; } }
+      @media only screen and (min-width: 768px) and (max-width: 1010px) {
+        .get-involved-block .three-col-articles .article-module .get-involved-article-buttons .get-involved-btn {
+          text-align: left;
+          margin-top: 20px; } }
 
 /*************************************/
 .panel-ourwork:visited .panel-ourwork:active, .panel-ourwork:focus {
